--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -2,8 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.isen.galiay.androidtoolbox">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-feature android:name="android.hardware.location.gps" />
 
     <application
         android:allowBackup="true"
@@ -21,14 +29,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity"
+        <activity
+            android:name=".HomeActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".CycleDeVieActivity"
+        <activity
+            android:name=".CycleDeVieActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".SauvegardeActivity"
+        <activity
+            android:name=".SauvegardeActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".PermissionsActivity"
+        <activity
+            android:name=".PermissionsActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".WebServiceActivity"></activity>
     </application>
 
 </manifest>
